<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Vipaka</string>
    <string name="action_settings">Settings</string>
    <string name="input_hint">Enter a Task</string>
    <string name="submit_button">Submit</string>
    <string name="title_activity_login">Log In</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_register">Register</string>
    <string name="action_logout">Logout</string>
    <string name="username">Username:</string>
    <string name="sign_up_label">Sign Up</string>
    <string name="password_label">Password:</string>
    <string name="already_have_an_account_label">Already Have An Account? Log In!</string>
    <string name="sign_in_label">Sign In</string>
    <string name="dont_have_an_account_label">Don\'t have an account? Register!</string>
    <string name="title_activity_main">Check In!</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="title_activity_nav_drawer">NavDrawerActivity</string>

</resources>
